# ddup

./: Cargo.toml  README.md
everything3-sys/: Cargo.toml  build.rs  wrapper.h
everything3-sys/src/: lib.rs
src/: algorithm.rs  dirlist.rs  error.rs  everything.rs  lib.rs  ntfs.rs  utils.rs  winioctl.rs
tests/: sanity.rs
