[package]
name = "ddup"
version = "0.0.4"
description = "Tool that detects potentially duplicated files in Windows NTFS volumes"
license = "MIT"
authors = ["netaneld122"]
edition = "2018"

[dependencies.winapi]
version = "0.3"
features = [
    "std", 
    "winuser", 
    "winioctl", 
    "ioapiset", 
    "errhandlingapi",
    "fileapi",
    "handleapi",
    "handleapi",
    "winnt",
    "ntdef",
    "minwindef",
]

[dependencies.crc]
version = "3.4.0"

[dependencies.clap]
version = "4.5.54"

[dependencies.glob]
version = "0.3.0"

[dependencies.walkdir]
version = "2.3.1"

[dependencies.indicatif]
version = "0.18.3"

[dependencies.rayon]
version = "1.3.0"