[package]
name = "ddup"
version = "0.0.5"
description = "Tool that detects potentially duplicated files in Windows NTFS volumes"
license = "MIT"
authors = ["netaneld122", "Small-Ku"]
edition = "2018"

[dependencies]
blake3 = { version = "1.5.1", default-features = false, features = ["mmap"] }
clap = "4.5.54"
env_logger = "0.11.8"
everything3-sys = { path = "everything3-sys" }
glob = "0.3.0"
indicatif = "0.18.3"
log = "0.4.29"
memmap2 = "0.9.9"
nanoserde = "0.2.1"
rapidhash = { version = "4.2.1", default-features = false, features = ["unsafe", "nightly"] }
rayon = "1.3.0"
simd-csv = "0.10.3"
snafu = "0.8.9"
walkdir = "2.3.1"
winapi = { version = "0.3", features = [
    "std",
    "winuser",
    "winioctl",
    "ioapiset",
    "errhandlingapi",
    "fileapi",
    "handleapi",
    "winnt",
    "ntdef",
    "minwindef",
] }
